<!--
  ~ Copyright 2020 Emre Üsküplü
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Photos</string>
    <string name="grid_view_icon_info">Grid View</string>
    <string name="list_view_icon_info">List View</string>
    <string name="first_fow">No Internet Connection</string>
    <string name="second_row">You are currently offline.</string>
    <string name="third_row">Check your mobile data or WiFi</string>
    <string name="fourth_row">connection and try again.</string>
    <string name="try_again_button_text">TRY AGAIN</string>
    <string name="error_showing_photo">Error occurred while showing photo.</string>
</resources>
