<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Emre Üsküplü
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/first_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fow"
        android:fontFamily="@font/merriweather_bold"
        android:textStyle="italic"
        android:textSize="@dimen/network_message_size"
        android:textColor="@android:color/black"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/second_row"/>

    <TextView
        android:id="@+id/second_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/second_row"
        android:fontFamily="@font/merriweather_regular"
        android:textStyle="italic"
        android:textSize="@dimen/network_message_size"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_row"
        app:layout_constraintBottom_toTopOf="@id/third_row"/>

    <TextView
        android:id="@+id/third_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/third_row"
        android:fontFamily="@font/merriweather_regular"
        android:textStyle="italic"
        android:textSize="@dimen/network_message_size"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_row"
        app:layout_constraintBottom_toTopOf="@id/fourth_row"/>

    <TextView
        android:id="@+id/fourth_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/fourth_row"
        android:fontFamily="@font/merriweather_regular"
        android:textStyle="italic"
        android:textSize="@dimen/network_message_size"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_row"
        app:layout_constraintBottom_toTopOf="@id/try_again_button"/>

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="@dimen/try_again_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="56dp"
        android:text="@string/try_again_button_text"
        android:fontFamily="@font/merriweather_regular"
        android:textSize="@dimen/try_again_button_text_size"
        android:textColor="@android:color/white"
        android:background="@drawable/button_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fourth_row"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>